# robotunnel-agent

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
config/: agent.toml
crates/rt-core/: Cargo.toml
crates/rt-core/src/: auth.rs  authorized_keys.rs  config.rs  heartbeat.rs  lib.rs  protocol.rs  ros.rs  tunnel.rs
crates/rt-llm/: Cargo.toml
crates/rt-llm/src/: keystore.rs  lib.rs
crates/rt-llm/src/providers/: claude.rs  deepseek.rs  gemini.rs  grok.rs  kimi.rs  minimax.rs  mod.rs  openai.rs  qwen.rs
crates/rt-runtime/: Cargo.toml
crates/rt-runtime/src/: executor.rs  lib.rs  router.rs
crates/rt-skill-acceptance/: Cargo.toml
crates/rt-skill-acceptance/src/: lib.rs
crates/rt-skill-debug/: Cargo.toml
crates/rt-skill-debug/src/: lib.rs  logs.rs  shell.rs  status.rs
crates/rt-skill-fleet/: Cargo.toml
crates/rt-skill-fleet/src/: lib.rs
crates/rt-skill-host-debug/: Cargo.toml
crates/rt-skill-host-debug/src/: lib.rs  logs.rs  shell.rs  status.rs
crates/rt-skill-monitor/: Cargo.toml
crates/rt-skill-monitor/src/: lib.rs
crates/rt-skill-ros2/: Cargo.toml
crates/rt-skill-ros2-observe/: Cargo.toml
crates/rt-skill-ros2-observe/src/: lib.rs
crates/rt-skill-ros2/src/: lib.rs
crates/rt-webrtc/: Cargo.toml
crates/rt-webrtc/src/: client.rs  lib.rs  types.rs
scripts/: install-agent.config.example  install-agent.sh  projection_worker.py  rviz_vnc_session.sh  webrtc-preflight.sh
src/: main.rs
src/application/: assistant.rs  contracts.rs  mod.rs  monitor_config.rs  visual_debug.rs  visual_debug_config.rs
src/application/projection_plane/: adapters.rs  bridge.rs  buffers.rs  engine.rs  mod.rs  policy.rs  profiles.rs  recommend.rs  runtime.rs  stats.rs  transforms.rs
src/interaction/: mod.rs
