[workspace]
members = ["crates/rt-core", "crates/rt-runtime", "crates/rt-skill-debug", "crates/rt-skill-ros2", "crates/rt-llm", "crates/rt-webrtc", "crates/rt-skill-monitor", "crates/rt-skill-fleet", "crates/rt-skill-acceptance"]
resolver = "2"

[package]
name = "robotunnel-agent"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "RoboTunnel Agent — layered robot connectivity and skill execution"

[[bin]]
name = "robotunnel-agent"
path = "src/main.rs"

[dependencies]
rt-core = { path = "crates/rt-core" }
rt-agent-dispatch = { path = "crates/rt-runtime" }
rt-skill-debug = { path = "crates/rt-skill-debug" }
rt-skill-ros2 = { path = "crates/rt-skill-ros2" }
rt-skill-monitor = { path = "crates/rt-skill-monitor" }
rt-skill-fleet = { path = "crates/rt-skill-fleet" }
rt-skill-acceptance = { path = "crates/rt-skill-acceptance" }
rt-llm = { path = "crates/rt-llm" }
rt-webrtc = { path = "crates/rt-webrtc" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
futures = "0.3"
serde_json = "1"
webrtc = "0.12"
bytes = "1"
uuid = { version = "1.8", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
