[package]
name = "rt-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "RoboTunnel core connection layer — tunnel, auth, heartbeat"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "macros", "rt"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
