[package]
name = "rt-llm"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "RoboTunnel LLM integration — local-encrypted key storage and multi-provider inference"

[dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
dirs = "5"
hostname = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
