[package]
name = "rt-runtime"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "ZeroClaw runtime — command execution and skill routing"

[dependencies]
tokio = { version = "1", features = ["process", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1"
rt-core = { path = "../rt-core" }
