[package]
name = "rt-agent-dispatch"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "RoboTunnel agent command dispatch and execution helpers"

[dependencies]
tokio = { version = "1", features = ["process", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1"
rt-core = { path = "../rt-core" }
