[package]
name = "rt-skill-fleet"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "RoboTunnel fleet state comparison skill — natural-language diff across robot fleet"

[dependencies]
rt-core = { path = "../rt-core" }
rt-llm = { path = "../rt-llm" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
