[package]
name = "rt-skill-host-debug"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "RoboTunnel Debug Skill — log viewing, shell execution, system status"

[dependencies]
tokio = { version = "1", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
rt-core = { path = "../rt-core" }
rt-agent-dispatch = { path = "../rt-runtime" }
async-trait = "0.1"
