[package]
name = "rt-skill-monitor"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "RoboTunnel proactive health monitoring and anomaly alert skill"

[dependencies]
rt-core = { path = "../rt-core" }
rt-llm = { path = "../rt-llm" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
