[package]
name = "rt-skill-ros2"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "RoboTunnel ROS2 Skill — topic discovery and proxying"

[dependencies]
rt-runtime = { path = "../rt-runtime" }
rt-core = { path = "../rt-core" }
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
thiserror = "1.0"
